# IoT-25

./: .gitignore  README.md
02-Programmering-C-och-Cpp/IoT-25-CPP-Uppgift1/: IoT-sensor-manager.cpp  README.md  main.cpp
02-Programmering-C-och-Cpp/IoT-25-CPP-Uppgift2/: README.md  data.txt  main.cpp
02-Programmering-C-och-Cpp/Labb/: calcAverage.cpp  fizzBuzz.cpp  ledState.cpp  maxOfThree.cpp  primeChecker.cpp  printSensor.cpp  ptrFun.cpp  (+4 more)
06-programmering-for-inbyggda-system/inlamning/06-inbyggda-system-inlamning/: .gitignore  .readme-backup.patch  AGENTS.md  CMakeLists.txt  Makefile  README.md  client_config.csv  program.hex
06-programmering-for-inbyggda-system/inlamning/06-inbyggda-system-inlamning/New folder/: main.c
06-programmering-for-inbyggda-system/inlamning/06-inbyggda-system-inlamning/include/: ClientManager.h  client_manager.h  clients_db.h  config.h  display.h  lcd.h  millis.h  uart.h  utils.h
06-programmering-for-inbyggda-system/inlamning/06-inbyggda-system-inlamning/prototype/: CMakeLists.txt
06-programmering-for-inbyggda-system/inlamning/06-inbyggda-system-inlamning/prototype/include/: config.h
06-programmering-for-inbyggda-system/inlamning/06-inbyggda-system-inlamning/prototype/src/: utils.c
06-programmering-for-inbyggda-system/inlamning/06-inbyggda-system-inlamning/src/: ClientManager.c  ClientManager.d  Display.d  client_manager.c  clients_db.c  display.c  lcd.d  main.c  main.d  millis.c  uart.c  utils.c  utils.d
06-programmering-for-inbyggda-system/inlamning/06-inbyggda-system-inlamning/wokwi/: diagram.json  wokwi-project.txt
(+214 files in other folders)
